--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-gh-pages": "~0.9.0"
   }
 }
